# braid

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.braid/: config.toml
.braid/issues/: brd-0fyx.md  brd-0jtz.md  brd-0l3d.md  brd-0nbv.md  brd-0oro.md  brd-0pwy.md  brd-0t32.md  brd-1gv2.md  brd-1i52.md  brd-1k3w.md  brd-1ml1.md  brd-1my2.md  brd-1qzs.md  brd-20hf.md  brd-20qi.md  brd-2bi5.md  brd-2e2l.md  brd-2ftd.md  brd-2gj9.md  brd-2wbe.md  brd-34d4.md  brd-37vc.md  brd-38g3.md  brd-3jfw.md  brd-3lb9.md  brd-3oav.md  brd-3r5n.md  brd-3udt.md  brd-3vzu.md  brd-47xn.md  brd-48y6.md  brd-4cjb.md  brd-4dto.md  brd-4gx4.md  brd-4nvh.md  brd-4osx.md  brd-4uqo.md  brd-4zc8.md  brd-5gpr.md  brd-5wnb.md  (+250 more)
.claude/skills/brd-design/: SKILL.md  implementation-issue-checklist.md
.github/workflows/: check-lint-test.yaml  release.yml
docs/: agent-workflow.md  configuration.md  design-issues.md  faq.md  getting-started.md  issue-types.md  meta-issues.md  release-workflow.md  sync-branch.md  workflow-modes.md
docs/specs/: tui.md
plans/: v0.1.md
src/: claims.rs  cli.rs  config.rs  date.rs  error.rs  git.rs  graph.rs  issue.rs  lib.rs  lock.rs  main.rs  migrate.rs  repo.rs  session.rs  test_utils.rs
src/commands/: add.rs  agent.rs  agent_run.rs  agents.rs  commit.rs  completions.rs  config.rs  dep.rs  doctor.rs  done.rs  edit.rs  init.rs  ls.rs  merge.rs  migrate.rs  mod.rs  mode.rs  next.rs  path.rs  ready.rs  reopen.rs  rm.rs  search.rs  set.rs  ship.rs  show.rs  skip.rs  start.rs  status.rs  sync.rs  tui.rs
src/tui/: app.rs  diff_panel.rs  diff_render.rs  event.rs  mod.rs  ui.rs
tests/: cli.rs  merge.rs  ship.rs
(+7 files in other folders)
