[package]
name = "braid"
version = "0.2.0"
edition = "2024"
license = "MIT"
default-run = "brd"

[[bin]]
name = "brd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.9"

# File locking
fs2 = "0.4"

# Random ID generation
rand = "0.9"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Errors
anyhow = "1"
thiserror = "2"

# TUI
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
