[package]
name = "braid"
version = "0.7.0"
edition = "2024"
license = "MIT"
description = "a lightweight, repo-local, multi-agent capable issue tracker"
repository = "https://github.com/alextes/braid"
readme = "README.md"
keywords = ["cli", "issue-tracker", "git", "productivity"]
categories = ["command-line-utilities", "development-tools"]
default-run = "brd"

[[bin]]
name = "brd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.9"

# File locking
fs2 = "0.4"

# Random ID generation
rand = "0.9"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Errors
anyhow = "1"
thiserror = "2"

# TUI
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
